# mtg-proxy

./: README.md  docker-compose.yml
api/: Dockerfile  api.py  pyproject.toml
common/: Dockerfile  pyproject.toml
common/pasteproxy/common/: db.py
scryfall-db/: Dockerfile  build_db.py  pyproject.toml
