[tool.poetry]
name = "pasteproxy-api"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pasteproxy-common = { path = "vendor/pasteproxy_common.tar.gz" }
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
