[tool.poetry]
name = "pasteproxy_common"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]
license = "MIT"

packages = [
    { include = "pasteproxy" },
]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
