[tool.poetry]
name = "scryfall-db"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yaspin = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
